--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,10 +1,23 @@
 set(HEADERS
+    checkbox.h
+    combobox.h
     common.h
+    decimaltextbox.h
+    dropdownlist.h
+    listbox.h
+    longdecimaltextbox.h
     model.h
+    multitextbox.h
+    presentation.h
+    presentationwidget.h
+    presentationwidgetvisitor.h
+    textbox.h
+    text.h
 )
 
 set(SOURCES
     model.cpp
+    presentationwidget.cpp
 )
 
 add_definitions(
