chore: move widget models to presentation folder

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,23 +1,23 @@
 set(HEADERS
-    checkbox.h
-    combobox.h
     common.h
-    decimaltextbox.h
-    dropdownlist.h
-    listbox.h
-    longdecimaltextbox.h
     model.h
-    multitextbox.h
-    presentation.h
-    presentationwidget.h
-    presentationwidgetvisitor.h
-    textbox.h
-    text.h
+    presentation/checkbox.h
+    presentation/combobox.h
+    presentation/decimaltextbox.h
+    presentation/dropdownlist.h
+    presentation/listbox.h
+    presentation/longdecimaltextbox.h
+    presentation/multitextbox.h
+    presentation/presentation.h
+    presentation/presentationwidget.h
+    presentation/presentationwidgetvisitor.h
+    presentation/textbox.h
+    presentation/text.h
 )
 
 set(SOURCES
     model.cpp
-    presentationwidget.cpp
+    presentation/presentationwidget.cpp
 )
 
 add_definitions(
