feat: add io framework

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -1,9 +1,17 @@
+find_package(Qt5 COMPONENTS Core REQUIRED)
+
 set(HEADERS
+    genericfile.h
     io.h
+    policyfile.h
+    policyfileformat.h
 )
 
 set(SOURCES
+    genericfile.cpp
     io.cpp
+    policyfile.cpp
+    policyfileformat.cpp
 )
 
 add_definitions(
@@ -11,4 +19,4 @@ add_definitions(
 )
 
 add_gpui_library(gpui-io ${SOURCES})
-target_link_libraries(gpui-io)
+target_link_libraries(gpui-io Qt5::Core)
