feat: add base for admx plugin

--- a/src/plugins/admx/CMakeLists.txt
+++ b/src/plugins/admx/CMakeLists.txt
@@ -1,10 +1,23 @@
+find_package(GPUI COMPONENTS io model REQUIRED)
+include_directories(${GPUI_INCLUDE_DIRS})
+
+find_package(Qt5 COMPONENTS Core REQUIRED)
+
 set(HEADERS
     admxformat.h
+    basetypes.h
+    policydefinitionfiles.h
+    policydefinitions.h
 )
 
 set(SOURCES
     admxformat.cpp
     admxplugin.cpp
+    basetypes.cpp
+    policydefinitionfiles.cpp
+    policydefinitions.cpp
 )
 
 add_gpui_plugin(admx-plugin ${SOURCES})
+target_link_libraries(admx-plugin Qt5::Core)
+target_link_libraries(admx-plugin ${GPUI_LIBRARIES})
