feat: add test for admx

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ macro(add_gpui_test test_name test_executable)
 endmacro(add_gpui_test)
 
 add_subdirectory(auto)
+
+# copy test data directory
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
