--- a/src/plugins/admx/CMakeLists.txt
+++ b/src/plugins/admx/CMakeLists.txt
@@ -5,19 +5,13 @@ find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(HEADERS
     admxformat.h
-    basetypes.h
-    policydefinitionfiles.h
-    policydefinitions.h
 )
 
 set(SOURCES
     admxformat.cpp
     admxplugin.cpp
-    basetypes.cpp
-    policydefinitionfiles.cpp
-    policydefinitions.cpp
 )
 
 add_gpui_plugin(admx-plugin ${SOURCES})
 target_link_libraries(admx-plugin Qt5::Core)
-target_link_libraries(admx-plugin ${GPUI_LIBRARIES})
+target_link_libraries(admx-plugin ${GPUI_LIBRARIES} policy-common)
