--- a/tests/auto/plugins/CMakeLists.txt
+++ b/tests/auto/plugins/CMakeLists.txt
@@ -4,4 +4,5 @@ include_directories(${GPUI_INCLUDE_DIRS})
 find_package(Qt5 COMPONENTS Core Test REQUIRED)
 set(QT_USE_QTTEST TRUE)
 
+add_subdirectory(adml)
 add_subdirectory(admx)
