build: update spec, rules and cmake files
build: fix bugs

build: fix bugs

build: fix bugs

build: fix bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,25 @@ set(CMAKE_MODULE_PATH ${GPUI_SOURCE_DIR}/cmake)
 
 set(GPUI_DIR "${CMAKE_BINARY_DIR}")
 
+if(UNIX)
+  include(GNUInstallDirs)
+else()
+  if (WIN32)
+    set(${CMAKE_INSTALL_LIBDIR} "lib")
+    set(${CMAKE_INSTALL_DATADIR} "share")
+    set(${CMAKE_INSTALL_INCLUDEDIR} "include")
+    set(${CMAKE_INSTALL_BINDIR} "bin")
+    message(STATUS "Setting installation destination on Windows to: ${CMAKE_INSTALL_PREFIX}")
+  else()
+    message(FATAL_ERROR "System not UNIX nor WIN32 - not implemented yet")
+  endif()
+endif()
+
 # configure and install GPUIConfig.cmake file
 configure_file(
     "${CMAKE_MODULE_PATH}/GPUIConfig.cmake.in"
     "${CMAKE_BINARY_DIR}/GPUIConfig.cmake"
     IMMEDIATE @ONLY)
-install(FILES ${CMAKE_BINARY_DIR}/GPUIConfig.cmake DESTINATION lib/gpui)
 
 # export the GPUI package
 export(PACKAGE GPUI)
