--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -4,7 +4,8 @@ macro(add_gpui_executable name)
 
   # add install target
   set_target_properties(${name} PROPERTIES OUTPUT_NAME gpui-${name})
-  install(TARGETS ${name} DESTINATION bin)
+  install(TARGETS ${name} DESTINATION bin
+      PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
   # copy binary
   add_custom_command(TARGET ${name} POST_BUILD COMMAND
