feat: add plugins loading

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -16,7 +16,7 @@ macro(add_gpui_executable name)
 
 endmacro(add_gpui_executable)
 
-find_package(GPUI COMPONENTS gui REQUIRED)
+find_package(GPUI COMPONENTS gui model REQUIRED)
 include_directories(${GPUI_INCLUDE_DIRS})
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
