build: add Qt5::Gui to model

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Qt5 COMPONENTS Core REQUIRED)
+find_package(Qt5 COMPONENTS Core Gui REQUIRED)
 
 set(HEADERS
     common.h
@@ -56,5 +56,5 @@ add_definitions(
 )
 
 add_gpui_library(gpui-model ${SOURCES})
-target_link_libraries(gpui-model Qt5::Core)
+target_link_libraries(gpui-model Qt5::Core Qt5::Gui)
 target_link_libraries(gpui-model gpui-io)
