build: update gui CMakeLists.txt

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -3,23 +3,31 @@ find_package(Qt5 COMPONENTS Widgets REQUIRED)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(HEADERS
+    contentwidget.h
     gui.h
     mainwindow.h
+    policydialog.h
     presentationbuilder.h
 )
 
 set(SOURCES
+    contentwidget.cpp
     gui.cpp
     mainwindow.cpp
+    policydialog.cpp
     presentationbuilder.cpp
 )
 
 set(UI_FORMS
+    contentwidget.ui
     mainwindow.ui
+    policydialog.ui
 )
 
 set(MOC_HEADERS
+    contentwidget.h
     mainwindow.h
+    policydialog.h
 )
 
 qt5_wrap_ui(UI_SOURCES ${UI_FORMS})
