feat: add io for registry files

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -8,6 +8,10 @@ set(HEADERS
     policyresourcesfile.h
     policyfileformat.h
     policyfileformat.inl
+    registryfile.h
+    registryfile.cpp
+    registryfileformat.h
+    registryfileformat.inl
 )
 
 set(SOURCES    
