--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -19,4 +19,5 @@ add_subdirectory(adml)
 add_subdirectory(admx)
 add_subdirectory(common)
 add_subdirectory(spol)
+add_subdirectory(pol)
 add_subdirectory(reg)
