feat: add pol file reader

--- a/src/plugins/pol/CMakeLists.txt
+++ b/src/plugins/pol/CMakeLists.txt
@@ -1,13 +1,25 @@
+find_package(GPUI COMPONENTS io model REQUIRED)
+include_directories(${GPUI_INCLUDE_DIRS})
+
 find_package(Qt5 COMPONENTS Core REQUIRED)
 
 set(HEADERS
     polformat.h
+
+    pregdata.h
+    pregparser.h
+    iconvwrapper.h
 )
 
 set(SOURCES
-    polformat.cpp
     polplugin.cpp
+    polformat.cpp
+
+    pregdata.cpp
+    pregparser.cpp
+    iconvwrapper.cpp
 )
 
 add_gpui_plugin(pol-plugin ${SOURCES})
 target_link_libraries(pol-plugin Qt5::Core)
+target_link_libraries(pol-plugin ${GPUI_LIBRARIES})
