tests: add pol file test

--- a/tests/auto/plugins/CMakeLists.txt
+++ b/tests/auto/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(GPUI COMPONENTS io model admx-plugin REQUIRED)
+find_package(GPUI COMPONENTS io model REQUIRED)
 include_directories(${GPUI_INCLUDE_DIRS})
 
 find_package(Qt5 COMPONENTS Core Test REQUIRED)
@@ -6,3 +6,4 @@ set(QT_USE_QTTEST TRUE)
 
 add_subdirectory(adml)
 add_subdirectory(admx)
+add_subdirectory(pol)
