--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -20,4 +20,5 @@ add_subdirectory(admx)
 add_subdirectory(common)
 add_subdirectory(spol)
 add_subdirectory(pol)
+add_subdirectory(preferences)
 add_subdirectory(reg)
