wip: add base of a preferences implementation

--- a/src/plugins/preferences/common/CMakeLists.txt
+++ b/src/plugins/preferences/common/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(HEADERS
     commonroles.h
     commonwidget.h
+    modelbuilderbase.h
+    modelbuilderbase.inl
     preferencesdialog.h
 )
 
