--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build software using docker
+    strategy:
+      matrix:
+        alt-version: [ "alt:p9", "alt:p10", "alt:sisyphus" ]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -20,5 +24,5 @@ jobs:
           path: RPMS
           repo: august-alt/filemanager-app
 
-      - run: docker build . --file Dockerfile --tag build-environment
+      - run: docker build . --file Dockerfile --tag build-environment --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg DISTR=${{ matrix.alt-version  }}
       - run: docker run --privileged=true -i --log-driver=none -a stdin -a stdout -a stderr -v "$(pwd)":/app build-environment
