feat: add translations

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Qt5 COMPONENTS Widgets Qml REQUIRED)
+find_package(Qt5 COMPONENTS Widgets Qml LinguistTools REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -45,6 +45,15 @@ set(MOC_HEADERS
     smbfilebrowser.h
 )
 
+set(TS_FILES
+    i18n/gui_en.ts
+    i18n/gui_ru.ts
+)
+
+set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION ${CMAKE_CURRENT_SOURCE_DIR})
+
+qt5_add_translation(QM_FILES ${TS_FILES})
+
 qt5_wrap_ui(UI_SOURCES ${UI_FORMS})
 qt5_wrap_cpp(MOC_SOURCES ${MOC_HEADERS})
 
@@ -52,7 +61,11 @@ add_definitions(
     -DGPUI_GUI_LIBRARY
 )
 
-add_gpui_library(gpui-gui ${UI_SOURCES} ${MOC_SOURCES} ${SOURCES})
+add_translation_resource(RESOURCES_SRC ${QM_FILES})
+
+qt5_add_resources(LIB_RESOURCES ${RESOURCES_SRC})
+
+add_gpui_library(gpui-gui ${UI_SOURCES} ${MOC_SOURCES} ${SOURCES} ${LIB_RESOURCES})
 target_link_libraries(gpui-gui Qt5::Widgets Qt5::Qml)
 target_link_libraries(gpui-gui gpui-model gpui-io)
 
