--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_MODULE_PATH ${GPUI_SOURCE_DIR}/cmake)
 
 set(GPUI_DIR "${CMAKE_BINARY_DIR}")
 
+include(TranslationUtils)
+
 if(UNIX)
   include(GNUInstallDirs)
 else()
