--- a/src/plugins/preferences/drives/CMakeLists.txt
+++ b/src/plugins/preferences/drives/CMakeLists.txt
@@ -31,3 +31,4 @@ qt5_wrap_cpp(MOC_SOURCES ${MOC_HEADERS})
 add_gpui_plugin(drives-plugin ${UI_SOURCES} ${MOC_SOURCES} ${SOURCES})
 target_link_libraries(drives-plugin Qt5::Core Qt5::Widgets)
 target_link_libraries(drives-plugin ${GPUI_LIBRARIES})
+target_link_libraries(drives-plugin xerces-c)
