--- a/src/plugins/preferences/ini/CMakeLists.txt
+++ b/src/plugins/preferences/ini/CMakeLists.txt
@@ -32,3 +32,4 @@ qt5_wrap_cpp(MOC_SOURCES ${MOC_HEADERS})
 add_gpui_plugin(ini-plugin ${UI_SOURCES} ${MOC_SOURCES} ${SOURCES})
 target_link_libraries(ini-plugin Qt5::Core Qt5::Widgets)
 target_link_libraries(ini-plugin ${GPUI_LIBRARIES})
+target_link_libraries(ini-plugin xerces-c)
