--- a/src/plugins/preferences/variables/CMakeLists.txt
+++ b/src/plugins/preferences/variables/CMakeLists.txt
@@ -32,3 +32,4 @@ qt5_wrap_cpp(MOC_SOURCES ${MOC_HEADERS})
 add_gpui_plugin(variables-plugin ${UI_SOURCES} ${MOC_SOURCES} ${SOURCES})
 target_link_libraries(variables-plugin Qt5::Core Qt5::Widgets)
 target_link_libraries(variables-plugin ${GPUI_LIBRARIES})
+target_link_libraries(variables-plugin xerces-c)
