fix: fix repocop warning adding aditional desktop category

--- a/setup/gpui.desktop
+++ b/setup/gpui.desktop
@@ -36,5 +36,5 @@ Comment[ru]=Редактор групповых политик
 Exec=gpui-main
 Terminal=false
 Type=Application
-Categories=System;
+Categories=System;FileTools;
 Icon=gpui
