fix: fix issue with group policy type both, fix: #74754, #74151

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -26,6 +26,7 @@ set(HEADERS
     admx/supporteddefinition.h
     admx/supportedon.h
     admx/supportedproduct.h
+    bundle/itemtype.h
     bundle/policybundle.h
     bundle/policyroles.h
     bundle/policytreemodel.h
