chore: add empty plugins for cmtx/cmtl

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -17,6 +17,8 @@ endmacro(add_gpui_plugin)
 
 add_subdirectory(adml)
 add_subdirectory(admx)
+add_subdirectory(cmtl)
+add_subdirectory(cmtx)
 add_subdirectory(common)
 add_subdirectory(pol)
 add_subdirectory(preferences)
