--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(admx)
 add_subdirectory(cmtl)
 add_subdirectory(cmtx)
 add_subdirectory(common)
+add_subdirectory(ini)
 add_subdirectory(pol)
 add_subdirectory(preferences)
 add_subdirectory(reg)
